- revamp view pane, part I

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1139,43 +1139,43 @@ BEGIN
     LTEXT           "Use origin tool to set hot spot. (0, 0) and (8, 8) are the two values allowed, although SCI0 games only use (0,0).",IDC_STATIC3,3,74,96,43
 END
 
-IDD_DIALOGCELVIEW2 DIALOGEX 0, 0, 102, 330
+IDD_DIALOGCELVIEW2 DIALOGEX 0, 0, 102, 333
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_STATIC_CHOSENCOLORS,"Static",SS_OWNERDRAW | WS_GROUP,15,7,24,19
-    CONTROL         "",IDC_STATIC_PALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,49,7,50,40
-    LTEXT           "Pen width:",IDC_STATIC1,3,27,36,10
-    COMBOBOX        IDC_COMBO_PENWIDTH,3,37,33,200,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "ñ",IDC_BUTTONUP,68,54,15,12
-    PUSHBUTTON      "ï",IDC_BUTTONLEFT,52,60,15,11
-    PUSHBUTTON      "ð",IDC_BUTTONRIGHT,84,60,15,11
-    PUSHBUTTON      "ò",IDC_BUTTONDOWN,68,66,15,11
-    PUSHBUTTON      "Add Before",IDC_BUTTON_ADDCELBEFORE,7,85,44,14
-    PUSHBUTTON      "Add After",IDC_BUTTON_ADDCELAFTER,7,99,44,14
-    PUSHBUTTON      "Delete",IDC_BUTTON_DELETECEL,54,85,41,14
-    LTEXT           "Transparency:",IDC_STATIC2,11,116,51,8,0,WS_EX_RIGHT
-    CONTROL         "T",IDC_BUTTON_TRANSPARENCY,"Button",BS_OWNERDRAW | BS_FLAT | WS_TABSTOP,65,113,21,14
-    LTEXT           "Size:",IDC_STATIC3,8,133,23,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDIT_CELWIDTH,32,130,21,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "x",IDC_STATIC5,57,133,8,8
-    EDITTEXT        IDC_EDIT_CELHEIGHT,65,130,22,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Offset:",IDC_STATIC4,5,153,25,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDIT_CELX,32,151,21,14,ES_AUTOHSCROLL
-    LTEXT           ",",IDC_STATIC6,56,154,9,8
-    EDITTEXT        IDC_EDIT_CELY,65,151,21,14,ES_AUTOHSCROLL
-    GROUPBOX        "Cel",IDC_STATIC_CELGROUP,3,75,96,93
-    PUSHBUTTON      "Add Before",IDC_BUTTON_ADDLOOPBEFORE,8,179,42,14
-    PUSHBUTTON      "Add After",IDC_BUTTON_ADDLOOPAFTER,8,193,42,14
-    PUSHBUTTON      "Delete",IDC_BUTTON_DELETELOOP,54,179,42,14
-    LTEXT           "Mirror of:",IDC_STATIC_MIRROROF,13,213,30,8,0,WS_EX_RIGHT
-    COMBOBOX        IDC_COMBO_MIRROR,49,211,46,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Loop",IDC_STATIC_LOOPGROUP,3,169,96,59
-    CONTROL         "Affect all cels in loop",IDC_CHECKAPPLYTOALL,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,232,96,11
-    CONTROL         "",IDC_TREELOOPS,"SysTreeView32",TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,3,259,96,64
-    LTEXT           "Palette:",IDC_STATIC7,3,52,33,10
-    COMBOBOX        IDC_COMBO_PALETTE,3,61,33,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Is scalable",IDC_CHECKISSCALABLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,246,96,11
+    CONTROL         "",IDC_STATIC_CHOSENCOLORS,"Static",SS_OWNERDRAW | WS_GROUP,3,104,24,19
+    CONTROL         "",IDC_STATIC_PALETTE,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,3,7,96,94
+    LTEXT           "Pen:",IDC_STATIC1,31,108,18,10
+    COMBOBOX        IDC_COMBO_PENWIDTH,49,106,27,200,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "ñ",IDC_BUTTONUP,68,139,15,12
+    PUSHBUTTON      "ï",IDC_BUTTONLEFT,52,145,15,11
+    PUSHBUTTON      "ð",IDC_BUTTONRIGHT,84,145,15,11
+    PUSHBUTTON      "ò",IDC_BUTTONDOWN,68,151,15,11
+    PUSHBUTTON      "Add Before",IDC_BUTTON_ADDCELBEFORE,7,170,44,14
+    PUSHBUTTON      "Add After",IDC_BUTTON_ADDCELAFTER,7,184,44,14
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELETECEL,54,170,41,14
+    LTEXT           "Transparency:",IDC_STATIC2,11,201,51,8,0,WS_EX_RIGHT
+    CONTROL         "T",IDC_BUTTON_TRANSPARENCY,"Button",BS_OWNERDRAW | BS_FLAT | WS_TABSTOP,65,198,21,14
+    LTEXT           "Size:",IDC_STATIC3,8,218,23,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDIT_CELWIDTH,32,215,21,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "x",IDC_STATIC5,57,218,8,8
+    EDITTEXT        IDC_EDIT_CELHEIGHT,65,215,22,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Offset:",IDC_STATIC4,5,238,25,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDIT_CELX,32,236,21,14,ES_AUTOHSCROLL
+    LTEXT           ",",IDC_STATIC6,56,239,9,8
+    EDITTEXT        IDC_EDIT_CELY,65,236,21,14,ES_AUTOHSCROLL
+    GROUPBOX        "Cel",IDC_STATIC_CELGROUP,3,160,96,93
+    PUSHBUTTON      "Add Before",IDC_BUTTON_ADDLOOPBEFORE,8,264,42,14
+    PUSHBUTTON      "Add After",IDC_BUTTON_ADDLOOPAFTER,8,278,42,14
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELETELOOP,54,264,42,14
+    LTEXT           "Mirror of:",IDC_STATIC_MIRROROF,13,298,30,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBO_MIRROR,53,296,46,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Loop",IDC_STATIC_LOOPGROUP,3,254,96,59
+    CONTROL         "Affect all cels in loop",IDC_CHECKAPPLYTOALL,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,317,96,11
+    LTEXT           "Palette:",IDC_STATIC9,6,126,30,10
+    COMBOBOX        IDC_COMBO_PALETTE,39,123,37,200,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Is scalable",IDC_CHECKISSCALABLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,3,145,45,11
+    PUSHBUTTON      "Edit",ID_VIEW_EDITPALETTE,80,122,19,14,BS_ICON | BS_FLAT
 END
 
 IDD_PICCOMMANDS DIALOGEX 0, 0, 117, 277
@@ -1904,8 +1904,9 @@ BEGIN
         VERTGUIDE, 36
         VERTGUIDE, 39
         VERTGUIDE, 65
+        VERTGUIDE, 76
         TOPMARGIN, 7
-        BOTTOMMARGIN, 323
+        BOTTOMMARGIN, 326
         HORZGUIDE, 129
     END
 
