- updates to template game

--- a/SCICompanion/Files/TemplateGame/SCI1.1/RESOURCE.CFG
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/RESOURCE.CFG
@@ -1,6 +1,6 @@
  videoDrv  = VGA320.DRV
- soundDrv  = SBPRO.DRV
- audioDrv  = AUDBLAST.DRV
+ soundDrv  = ADL.DRV
+ audioDrv  = AUDDISNY.DRV
  joyDrv    = NO
  kbdDrv    = IBMKBD.DRV
  mouseDrv  = STDMOUSE.DRV
