--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -23,7 +23,7 @@ n956=ForwardCounter
 n110=rm110
 n990=SRDialog
 n978=GameControls
-n998=Feature
+n998=View
 n986=Orbit
 n949=Blk
 n980=Tutorial
@@ -56,7 +56,7 @@ n945=PolyPath
 n946=Polygon
 n947=DlgWindow
 n948=FeatureWriter
-n950=CueObj
+n950=Feature
 n951=MoveFwd
 n953=Approach
 n954=Door
@@ -95,10 +95,12 @@ n014=logevent
 [Game]
 Executable=run.cmd
 ExeCmdLineParameters=
-Name=TemplateGame
+Name=New Game
 Language=sc
 [Map]
 n65535=n0-1
 [Vocab]
 n997=SelectorTable
 n996=ClassTable
+[Pic]
+n200=DeathRoom
