- switch to embedded palette when editing view palette - allow removing view palette - fix bugs with importing gifs with palettes - fix a number of palette update bugs - fix bug with <8 bit per pixel gifs - fix bug with upside down gifs

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -471,6 +471,7 @@ BEGIN
         MENUITEM "&Import image sequence",      33001
         MENUITEM "&Animate",                    ID_ANIMATE
         MENUITEM "Edit &palette",               ID_VIEW_EDITPALETTE
+        MENUITEM "&Remove embedded palette",    ID_VIEW_REMOVEEMBEDDEDPALETTE
     END
     POPUP "Voca&b"
     BEGIN
