- support original aspect ratio - part 1

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -794,6 +794,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,105,116,10
     COMBOBOX        IDC_COMBO_MIDIDEVICE,214,87,133,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Midi device:",IDC_STATIC1,145,89,55,8,0,WS_EX_RIGHT
+    CONTROL         "Use original SCI aspect ratio",IDC_CHECK_ASPECTRATIO,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,119,106,10
 END
 
 IDD_VPC DIALOGEX 0, 0, 182, 20
