--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1605,7 +1605,8 @@ BEGIN
     PUSHBUTTON      "Goto script",IDC_GOTOSCRIPT,7,7,103,14,BS_RIGHT
     PUSHBUTTON      "Edit",ID_PIC_EDITPALETTE,7,162,19,14,BS_ICON | BS_FLAT
     PUSHBUTTON      "Set background",ID_EDIT_PASTEINTOPIC,44,25,66,14
-    CONTROL         "",IDC_TAB1,"SysTabControl32",0x0,7,59,103,30
+    CONTROL         "Commands",IDC_RADIOCOMMANDS,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE | BS_FLAT,7,71,47,15
+    CONTROL         "Polygons",IDC_RADIOPOLYGONS,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE | BS_FLAT,56,71,47,15
 END
 
 
