--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1607,6 +1607,7 @@ BEGIN
     PUSHBUTTON      "Set background",ID_EDIT_PASTEINTOPIC,44,25,66,14
     CONTROL         "Commands",IDC_RADIOCOMMANDS,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE | BS_FLAT,7,71,47,15
     CONTROL         "Polygons",IDC_RADIOPOLYGONS,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE | BS_FLAT,56,71,47,15
+    LISTBOX         IDC_LISTPOLYGONS,7,93,103,66,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
 END
 
 
