- undo support for polygons

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1615,7 +1615,7 @@ BEGIN
     PUSHBUTTON      "Set background",ID_EDIT_PASTEINTOPIC,44,25,66,14
     CONTROL         "Commands",IDC_RADIOCOMMANDS,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE | BS_FLAT,7,71,47,15
     CONTROL         "Polygons",IDC_RADIOPOLYGONS,"Button",BS_AUTORADIOBUTTON | BS_PUSHLIKE | BS_FLAT,56,71,47,15
-    LISTBOX         IDC_LISTPOLYGONS,7,120,103,39,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_EXTENDEDSEL | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_LISTPOLYGONS,7,120,103,39,LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | LBS_NODATA | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBOPOLYTYPE,44,105,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Type:",IDC_STATICPOLYTYPE,7,108,30,8
     CONTROL         "Show polygons",IDC_CHECKSHOWPOLYS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,93,103,10
