- show polys checkbox in pic command side pane - support for deleting nouns and conditions

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1561,8 +1561,10 @@ BEGIN
     LTEXT           "Room conditions:",IDC_STATIC2,7,157,55,11
     CONTROL         "",IDC_LISTNOUNS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,27,103,118
     CONTROL         "",IDC_LISTCONDITIONS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
-    PUSHBUTTON      "Add noun",IDC_BUTTONADDNOUN,64,7,46,14
-    PUSHBUTTON      "Add cond.",IDC_BUTTONADDCONDITION,64,154,47,14
+    PUSHBUTTON      "Add new",IDC_BUTTONADDNOUN,64,7,28,14
+    PUSHBUTTON      "Add new",IDC_BUTTONADDCONDITION,64,154,28,14
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETENOUN,92,7,18,14,BS_ICON
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETECONDITION,92,154,18,14,BS_ICON
 END
 
 IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
@@ -2169,6 +2171,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 110
+        VERTGUIDE, 92
         TOPMARGIN, 7
         BOTTOMMARGIN, 270
     END
