- support for deleting verbs and talkers

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1544,13 +1544,15 @@ IDD_MESSAGETOOLBOX DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Global verbs:",IDC_STATIC1,7,27,49,11
-    LTEXT           "Global talkers:",IDC_STATIC2,7,157,55,11
+    LTEXT           "Global verbs:",IDC_STATIC1,7,27,43,11
+    LTEXT           "Global talkers:",IDC_STATIC2,7,157,45,11
     CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,41,103,104
     CONTROL         "",IDC_LISTTALKERS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
-    PUSHBUTTON      "Add verb",IDC_BUTTONADDVERB,64,23,46,14
-    PUSHBUTTON      "Add talker",IDC_BUTTONADDTALKER,64,154,47,14
+    PUSHBUTTON      "Add new",IDC_BUTTONADDVERB,54,23,35,14
+    PUSHBUTTON      "Add new",IDC_BUTTONADDTALKER,54,154,35,14
     PUSHBUTTON      "Script",IDC_GOTOSCRIPT,47,7,63,14,BS_RIGHT
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETEVERB,92,23,18,14,BS_ICON
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETETALKER,92,154,18,14,BS_ICON
 END
 
 IDD_MESSAGEHELPER DIALOGEX 0, 0, 117, 277
@@ -2163,6 +2165,8 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 110
+        VERTGUIDE, 54
+        VERTGUIDE, 89
         TOPMARGIN, 7
         BOTTOMMARGIN, 270
     END
