- updates to template game

--- a/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI1.1/game.ini
@@ -85,13 +85,14 @@ n994=Game
 n995=InvI
 n996=User
 n999=Obj
-n012=GlobalPalettes
+n012=ColorInit
 n982=Helpers
 n958=DisposeLoad
 n926=Flip
 n101=rm101
 n105=rm105
 n014=logevent
+n010=debughandler
 [Game]
 Executable=run.cmd
 ExeCmdLineParameters=
