--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -345,6 +345,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
     <None Include="Files\TemplateGame\SCI1.1\LSL6.BAT" />
     <None Include="Files\TemplateGame\SCI1.1\MICROSOF.DRV" />
     <None Include="Files\TemplateGame\SCI1.1\MT32.DRV" />
+    <None Include="Files\TemplateGame\SCI1.1\poly\110.shp" />
     <None Include="Files\TemplateGame\SCI1.1\PROAUDIO.DRV" />
     <None Include="Files\TemplateGame\SCI1.1\README" />
     <None Include="Files\TemplateGame\SCI1.1\README.BAT" />
@@ -392,8 +393,8 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Decompiler" "$(OutDir)Decompiler"
     <None Include="Files\TemplateGame\SCI1.1\src\dcolorbutton.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\deathroom.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\deathroom.sco" />
+    <None Include="Files\TemplateGame\SCI1.1\src\debughandler.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\debughandler.sco" />
-    <None Include="Files\TemplateGame\SCI1.1\src\debughandler_880.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\dicon.sc" />
     <None Include="Files\TemplateGame\SCI1.1\src\dicon.sco" />
     <None Include="Files\TemplateGame\SCI1.1\src\dinvd.sc" />
