--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -455,6 +455,8 @@ BEGIN
     POPUP "&Game"
     BEGIN
         MENUITEM "Run &game\tF5",               ID_RUNGAME
+        MENUITEM "&Debug game",                 ID_DEBUGGAME
+        MENUITEM "&Stop debugging",             ID_STOPDEBUG
         MENUITEM SEPARATOR
         MENUITEM "&Properties",                 ID_GAME_PROPERTIES
         MENUITEM "&Version detection",          ID_GAME_VERSIONDETECTION
@@ -496,6 +498,7 @@ BEGIN
         MENUITEM "New &empty script",           ID_NEWSCRIPT
         MENUITEM "&Insert object",              32842
         MENUITEM SEPARATOR
+        MENUITEM "Debu&g room",                 ID_DEBUGROOM
         MENUITEM "&Disassemble",                ID_SCRIPT_DISASSEMBLE
         MENUITEM "View &object file",           ID_SCRIPT_VIEWOBJECTFILE
         MENUITEM "View &script resource",       ID_SCRIPT_VIEWSCRIPTRESOURCE
@@ -739,7 +742,7 @@ CAPTION "About SCICompanion"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC4,11,17,21,20
-    LTEXT           "SCICompanion Version 3.0.0.5",IDC_STATIC1,50,7,119,8,SS_NOPREFIX
+    LTEXT           "SCICompanion Version 3.0.0.6",IDC_STATIC1,50,7,119,8,SS_NOPREFIX
     LTEXT           "Copyright (C) 2015",IDC_STATIC2,50,25,119,8
     DEFPUSHBUTTON   "OK",IDOK,208,7,50,16,BS_FLAT | WS_GROUP
     LTEXT           "By Phil Fortier (IceFall Games)\n\n\nParts of code (""Crystal Edit"" text editor) by Andrei Stcherbatchenko\n\nContains decompression routines from the ScummVM project.\n\ncppformat library  Copyright (c) 2012 - 2015, Victor Zverovich",IDC_STATIC3,50,48,189,115
@@ -1269,8 +1272,9 @@ IDD_PREVIEWVIEW DIALOGEX 0, 0, 153, 250
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_STATICVIEW,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,15,7,123,116
+    CONTROL         "",IDC_STATICVIEW,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,15,24,123,99
     CONTROL         "",IDC_STATIC2,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,20,130,113,110
+    CTEXT           "",IDC_STATICRESNUM,7,7,139,8
 END
 
 IDD_PREVIEWSCRIPT DIALOGEX 0, 0, 153, 230
@@ -1667,12 +1671,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "IceFall Games"
             VALUE "FileDescription", "SCICompanion"
-            VALUE "FileVersion", "3.0.0.5"
+            VALUE "FileVersion", "3.0.0.6"
             VALUE "InternalName", "SCICompanion.exe"
             VALUE "LegalCopyright", "(c) IceFall Games.  All rights reserved."
             VALUE "OriginalFilename", "SCICompanion.exe"
             VALUE "ProductName", "SCI Companion 3"
-            VALUE "ProductVersion", "3.0.0.5"
+            VALUE "ProductVersion", "3.0.0.6"
         END
     END
     BLOCK "VarFileInfo"
