--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -200,6 +200,7 @@
     <ClCompile Include="Src\Compile\DisassembleHelper.cpp" />
     <ClCompile Include="Src\Compile\Disassembler.cpp" />
     <ClCompile Include="Src\Compile\ControlFlowGraph.cpp" />
+    <ClCompile Include="Src\Compile\Evaluate.cpp" />
     <ClCompile Include="Src\Compile\GenerateScriptResource.cpp" />
     <ClCompile Include="Src\Compile\DecompilerConfig.cpp" />
     <ClCompile Include="Src\Compile\OutputCodeHelper.cpp" />
