- beginnings of gutter around PicView (to easily go to edges) - Beginnings of name support for polygons - fixes for gradient in ExtTabCtrl - ctrl-A override for edit controls - new pics inherit global palette instead of hard-coded

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -817,6 +817,7 @@
     <Image Include="res\toolbart.bmp" />
     <Image Include="res\Transparent.ico" />
     <Image Include="res\Up.bmp" />
+    <Image Include="res\Upload.ico" />
     <Image Include="res\view.ico" />
     <Image Include="res\view_details.ico" />
     <Image Include="res\view_icons.ico" />
